force-app/main/default/objects/UserInfo__c/UserInfo__c.object-meta.xml
<CustomObject>
    <label>UserInfo</label>
    <nameField>
        <label>UserInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>