force-app/main/default/objects/UserInfo__c/fields/Company_Position__c.field-meta.xml
<CustomField>
    <fullName>Company_Position__c</fullName>
    <label>Company Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>