force-app/main/default/objects/UserInfo__c/fields/CostCenter_Code__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_Code__c</fullName>
    <label>CostCenter Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>