force-app/main/default/objects/UserInfo__c/fields/CostCenter_L3__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_L3__c</fullName>
    <label>CostCenter_L3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>