force-app/main/default/objects/UserInfo__c/fields/CostCenter_L4__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_L4__c</fullName>
    <label>CostCenter_L4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>