force-app/main/default/objects/UserInfo__c/fields/EpCompany__c.field-meta.xml
<CustomField>
    <fullName>EpCompany__c</fullName>
    <label>EpCompany</label>
    <length>80</length>
    <type>Text</type>
</CustomField>