force-app/main/default/objects/UserInfo__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <label>Role Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>